@@ -173,6 +173,7 @@ namespace libtorrent
 			, disk_cache_algorithm(largest_contiguous)
 			, read_cache_line_size(16)
 			, write_cache_line_size(32)
+			, adjust_priority_on_disk_failure(true)
 		{}
 
 		// this is the user agent that will be sent to the tracker
@@ -598,6 +599,14 @@ namespace libtorrent
 		// blocks is found in the write cache, it
 		// is flushed immediately
 		int write_cache_line_size;
+
+		// if this is set to true, piece priorities
+		// will be automatically changed if there is
+		// an error writing to the disk, attempting
+		// to avoid hitting the error again. If there
+		// is an error reading, the torrent will be
+		// paused
+		bool adjust_priority_on_disk_failure;
 	};
 
 #ifndef TORRENT_DISABLE_DHT
